--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+body,html{
+  background-color: black;
+}
 body{
   padding: 1rem;
+  overflow-x: hidden;
 }
 canvas{
   position: fixed;
@@ -12,7 +15,9 @@ canvas{
 }
 .main-cont{
   display: grid;
+  max-width: 100vw;
   position: absolute;
+  left: 0;
   color: white;
   font-size: 4rem;
 }
