--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,19 @@ canvas{
   color: white;
   font-size: 4rem;
 }
+body::-webkit-scrollbar {
+  width: 12px;  
+}
+body::-webkit-scrollbar-track {
+  background: rgb(29, 29, 29) ;      
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(95, 95, 95);  
+  border-radius: 20px;     
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(71, 71, 71);
+}
+body::-webkit-scrollbar-thumb:active {
+  background-color: rgb(51, 51, 51);
+}
